--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body{
 }
 .main-container{
     padding: 15px;
-    border: white solid 2px;
+    background-color: white;
+
 }
 
 .one-container {
@@ -42,16 +43,16 @@ figure{
     background-color: white;
     height: 100vh;
     width: 100%;
-    max-width: 360px;
+    max-width: 70%;
     position: fixed;
     top: 0;
     right: -450px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 3rem;
+    font-size: 1.5rem;
+    line-height: 4rem;
+    color: rgb(74, 73, 73);
+    padding-top: 15vh;
     transition: .3s ease;
 }
 
@@ -233,6 +234,7 @@ button:hover{
 .full-image img{
     width: 100%;
 }
+
 
 
 
