Rezised to a 370px mobile screen

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 body{
     max-width: 480px ;
+    min-width: 370px;
     margin: auto;
     font-family: Inter-Regular;
 }
@@ -124,27 +125,27 @@ nav{
 }
 
 h2{
+    width: 80%;
     margin: 20px 0;
-    font-size: 3.75rem;
+    font-size: 2.25rem;
     font-family: Inter-Bold;
 }
 
  p {
     color: rgb(73, 73, 73);
     font-weight: thin;
-    font-size: 1.25rem;
-    line-height: 2rem;
-
+    font-size: .95rem;
+    line-height: 1.75rem;
 }
 
 button{
-    background-color: salmon;
+    background-color: rgb(255, 87, 68);
     border: none;
     width: 50%;
     height: 50px;
-    margin: 20px 0;
+    margin: 10px 0 35px 0;
     font-family: inter-bold;
-    font-size: 1rem;
+    font-size: .9rem;
     text-transform: uppercase;
     letter-spacing: 4px;
 }
@@ -166,7 +167,7 @@ button:hover{
 }
 
 .third-container h3 {
-    font-size: 3rem;
+    font-size: 1.75rem;
     font-family: Inter-Bold;
     color: orange;
     margin: 0;
@@ -175,19 +176,20 @@ button:hover{
 }
 
 .third-container h4 {
-    font-size: 1.6rem;
+    font-size: 1.25rem;
     font-family: Inter-Bold;
-    margin: 16px 0;
+    margin: 10px 0;
 }
 
 .third-container p {
     color: rgb(164, 164, 164);
-    font-size: 1.25rem;
+    font-size: .9rem;
+    line-height: 1.5rem;
 }
 
 .content-one, .content-two{
     border-bottom: white solid 1px;
-    padding: 30px 0;
+    padding: 15px 0;
 
 }
 
@@ -211,14 +213,14 @@ button:hover{
 .content h4 {
     font-family: Inter-Bold;
 
-    font-size: 3rem;
+    font-size: 2rem;
     margin: 0;
     color: salmon;
 }
 
 .content h5{
     font-family: Inter-Bold;
-    font-size: 1.45rem;
+    font-size: 1rem;
     margin: 15px 0;
 }
 
