--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ h2{
     color: rgb(73, 73, 73);
     font-weight: thin;
     font-size: .95rem;
-    line-height: 1.75rem;
+    line-height: 1.50rem;
 }
 
 button{
@@ -201,6 +201,7 @@ button:hover{
 }
 .one-third-container{
     max-width: 100%;
+    height: 130px;
     display: flex;
     padding: 20px 0;
 }
@@ -208,6 +209,7 @@ button:hover{
 .one-third-container h4, h5, p {
     width: 100%;
 }
+
 .content h4 {
     font-family: Inter-Bold;
 
@@ -227,8 +229,7 @@ button:hover{
 }
 
 .one-third-container img{
-    width: 30%;
-    margin-right: 35px;
+    margin-right: 20px;
 }
 
 .full-image img{
@@ -286,6 +287,9 @@ button:hover{
         font-size: 3rem;
     }
 
+    p{
+        font-size: 1rem;
+    }
     .second-container h2 {
         width: 45%;
     }
@@ -318,6 +322,18 @@ button:hover{
 
     .fourth-container{
         display: flex;
+    }
+
+    .content{
+        margin-right: 30px;
+    }
+
+    .content h4{
+        font-size: 1.75rem;
+    }
+
+    .content h5{
+        font-size: .95rem;
     }
 
     .fourth-container h5:hover{
